@@ -58,13 +58,13 @@ messages = {
     "backup-job-run-now-button-label" : "Run now",    
     "backup-create-button-finish": "Complete",
     "backup-edit-button-finish": "Complete",
-    "backup-job-dialog-remove-message": "Are you pretty sure you actually want to remove this particular backup job?",
+    "backup-job-dialog-remove-message": "Are you sure you want to permanently remove this backup job?",
     "backup-job-dialog-remove-header": "Remove backup job",
-    "backup-job-dialog-remove-button-label": "Yea",
+    "backup-job-dialog-remove-button-label": "Remove backup job",
     "backup-job-remove-success-message": "Backup job was removed from the system",
-    "backup-job-dialog-run-message": "Are you pretty sure you actually want to run this particular backup job right now?",
+    "backup-job-dialog-run-message": "Are you sure you want to run this backup job now?",
     "backup-job-dialog-run-header": "Run backup job now",
-    "backup-job-dialog-run-button-label": "Yea",
+	"backup-job-dialog-run-button-label": "Run backup job",
     "backup-job-run-success-message": "Backup job has been initialized to be executed at this particlular moment in time.",
 	"backup-dialog-restore-title": "Restore backed up data",
 	"backup-dialog-restore-label": "Restore selected files and directories",
